<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/titolo"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/big_text"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sottotitolo"
        android:layout_marginTop="5sp"
        android:layout_below="@+id/title"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/normal_text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="5sp"
        android:layout_below="@+id/title"
        android:layout_alignParentEnd="true"
        android:id="@+id/date"
        android:textSize="@dimen/small_text"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/articolo"
        android:id="@+id/body"
        android:layout_marginTop="10dp"
        android:layout_below="@id/date"
        android:layout_alignEnd="@id/date"
        android:textAlignment="center"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_leggi"
        android:layout_below="@id/body"
        android:layout_alignEnd="@id/date"
        android:background="@color/colorAccent"
        android:layout_marginTop="10sp"
        android:id="@+id/button_id"
        android:onClick="selfDestruct"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/button_id"
        android:background="@color/colorPrimary"
        android:layout_marginTop="5dp"
        android:id="@+id/linea1"
        >
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:layout_below="@id/linea1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title2"
            android:text="@string/titolo"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/big_text"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sottotitolo"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/title2"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/normal_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="5sp"
            android:layout_below="@+id/title2"
            android:layout_alignParentEnd="true"
            android:id="@+id/date2"
            android:textSize="@dimen/small_text"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/articolo"
            android:id="@+id/body2"
            android:layout_marginTop="10dp"
            android:layout_below="@id/date2"
            android:layout_alignEnd="@id/date2"
            android:textAlignment="center"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_leggi"
            android:layout_below="@id/body2"
            android:layout_alignEnd="@id/date2"
            android:background="@color/colorAccent"
            android:layout_marginTop="10sp"
            android:id="@+id/button2"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/button2"
            android:background="@color/colorPrimary"
            android:layout_marginTop="5dp"
            >
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
